--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -8,4 +8,4 @@ liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
 lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
-custom: ['https://www.buymeacoffee.com/pangineering','https://paypal.me/pangineering'] 
+custom: ['https://www.buymeacoffee.com/pangineering','PayPal.Me/pangineering6415'] 
